subdir('deps/b64')
subdir('deps/hash')
subdir('deps/asprintf.c')
subdir('deps/c_string_buffer')
subdir('deps/c_stringfn')
subdir('deps/c_fsio')
subdir('deps/ms')
subdir('deps/timestamp')
subdir('deps/c_vector')
subdir('deps/chan')
subdir('deps/tempdir')
subdir('deps/bytes')
subdir('deps/c_workqueue')
subdir('deps/c_log')
subdir('deps/c_greatest')

